<resources>
    <string name="app_name">BiomoduleDemo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="auth_page_title">请输入情感云 APP_KEY 和 APP_SECRET</string>
    <string name="auth_start">继续</string>
    <string name="brainwave">脑波</string>
    <string name="heart_rate">心率</string>
    <string name="main_connect_to_ble">连接蓝牙设备</string>
    <string name="main_disconnect_ble">断开蓝牙设备</string>
    <string name="main_clear">清屏</string>
    <string name="main_pause">暂停</string>
    <string name="main_init">初始化</string>
    <string name="upload">获取报表数据</string>
    <string name="main_finish">结束</string>
    <string name="main_submit_comment">提交评价</string>
    <string name="main_api_detail">API 详细功能</string>
    <string name="detail_connect_to_cloud">连接情感云平台</string>
    <string name="detail_auth">权限认证</string>
    <string name="detail_disconnect_cloud">断开情感云平台</string>
    <string name="detail_restore">模拟中断恢复</string>
    <string name="detail_init_bio_service">初始化基础服务</string>
    <string name="detail_sub_bio_service">订阅基础服务</string>
    <string name="detail_upload_data">上传生物数据</string>
    <string name="detail_pause">暂停</string>
    <string name="detail_get_bio_report">获取基础报表</string>
    <string name="detail_unsub_bio_service">取消订阅基础服务</string>
    <string name="detail_start_affective_service">启动情感云服务</string>
    <string name="detail_sub_affective_service">订阅情感服务</string>
    <string name="detail_get_affective_service">获取情感数据报表</string>
    <string name="detail_unsub_affective_service">取消订阅情感服务</string>
    <string name="detail_finish_affective_service">结束情感云服务</string>
    <string name="main_upload">开始上传数据</string>
    <string name="main_receive">接受消息</string>
    <string name="main_send">发送消息</string>
    <string name="main_realtime_biodata">基础服务实时数据：</string>
    <string name="main_realtime_affective_data">情感服务实时数据：</string>
    <string name="main_sdk_init_failed">SDK初始化失败：</string>
    <string name="main_sdk_init_success">SDK初始化成功，等待数据上传...</string>
    <string name="main_ble_scaning">正在扫描设备...</string>
    <string name="main_scan_success">扫描成功，正在连接设备...</string>
    <string name="main_connect_to_ble_success">设备连接成功!</string>
    <string name="main_ble_connect_failed">设备连接失败：</string>
    <string name="main_start_uploading">开始上传数据...</string>
    <string name="main_bio_report">基础报表：</string>
    <string name="main_get_bio_report_failed">基础报表出错：</string>
    <string name="main_get_affective_report">情感报表：</string>
    <string name="mian_get_affective_report_failed">情感报表出错：</string>
    <string name="main_disconnected_from_cloud">情感云已成功断开！</string>
    <string name="main_disconnected_from_cloud_failed">情感云断开失败：</string>
    <string name="main_submit_comment_success">评价提交成功！</string>
    <string name="main_submit_comment_failed">评价提交失败：</string>
    <string name="mian_cloud_restore_success">情感云已重连成功，请重新上传数据</string>
    <string name="main_cloud_restore_failed">情感云重连失败：</string>
</resources>
