<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">


    <!--导航条-->
    <cn.entertech.biomoduledemo.utils.PagerSlidingTabStrip
        android:id="@+id/message_tabs"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        app:pstsIndicatorColor="@color/colorPrimary"
        app:pstsIndicatorHeight="2dp"
        app:pstsTabSelectedTextColor="@color/colorPrimary"
        app:pstsTabUnselectedTextColor="#999999"
        app:pstsUnderlineHeight="0dp" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_contain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </androidx.viewpager.widget.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onConnectDevice"
            android:text="@string/main_connect_to_ble"
            android:textAllCaps="false" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDisconnectDevice"
            android:text="@string/main_disconnect_ble"
            android:textAllCaps="false" />


        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClear"
            android:text="@string/main_clear"
            android:textAllCaps="false" />


        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onPause"
            android:text="@string/main_pause"
            android:textAllCaps="false" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onInit"
            android:text="@string/main_init"
            android:textAllCaps="false" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onStartUpload"
            android:text="@string/main_upload"
            android:textAllCaps="false" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onReport"
            android:text="@string/upload"
            android:textAllCaps="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onFinish"
            android:text="@string/main_finish"
            android:textAllCaps="false" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onSubmit"
            android:text="@string/main_submit_comment"
            android:textAllCaps="false" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onRestore"
            android:text="Restore"
            android:textAllCaps="false" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toApiDetail"
        android:text="@string/main_api_detail"
        android:textAllCaps="false"
        android:visibility="gone" />

    <!--<Button android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="注意力"-->
    <!--android:onClick="toAttention"/>-->
    <!--<Button android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="放松度"-->
    <!--android:onClick="toRelaxation"/>-->
    <!--<Button android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="压力值"-->
    <!--android:onClick="toPressure"/>-->


</LinearLayout>